--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_text_kit: ^4.2.3
   flutter_launcher_icons: ^0.14.3
   focused_menu: ^1.0.5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
