--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   focused_menu: ^1.0.5
   intl: ^0.20.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
