--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   focused_menu: ^1.0.5
   intl: ^0.20.2
   carousel_slider: ^5.0.0
+  flutter_local_notifications:
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
